[package]
name = "calypso"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
default-run = "calypso"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["libs/daedalus", "libs/calypso-cangen"]

[workspace.dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.139"
regex = "1.11.1"

[dependencies]
paho-mqtt = "0.13.1"
protobuf-codegen = "3.5.1"
protobuf = "3.5.1"
bitstream-io = "2.6.0"
clap = { version = "4.5.30", features = ["derive", "env"] }
rand = "0.9"
regex = { workspace = true }
phf = { version = "0.11.3", features = ["macros"] }
calypso-cangen = { path = "./libs/calypso-cangen" }
daedalus = { path = "./libs/daedalus" }

[target.'cfg(target_os = "linux")'.dependencies]
socketcan = { version = "3.3.1" }


[build-dependencies]
protobuf-codegen = "3.5.1"
calypso-cangen = { path = "./libs/calypso-cangen" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
