[package]
name = "calypso-simulate"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
rand = "0.8"
calypso = { path = "../calypso" }
daedalus = { path = "../daedalus" }
protobuf.workspace = true

[build-dependencies]
protobuf-codegen.workspace = true
calypso-cangen = { path = "../calypso-cangen" }