[package]
name = "calypso"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
default-run = "calypso"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socketcan = "3.3.1"
paho-mqtt.workspace = true
protobuf-codegen.workspace = true
protobuf.workspace = true
bitstream-io = "2.6.0"
clap.workspace = true
phf = { version = "0.11.2", features = ["macros"] }
calypso-cangen = { path = "../calypso-cangen" }
daedalus = { path = "../daedalus" }


[build-dependencies]
protobuf-codegen = "3.5.1"
calypso-cangen = { path = "../calypso-cangen" }