[package]
name = "calypso-cangen"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10.8"
thiserror = "2.0.11"
